<resources>
    <string name="app_name">Musix</string>
    <string name="musix">Musix</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_music">My Music</string>
    <string name="premium">Premium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_evening">Good Evening</string>
    <string name="latest_hits">Latest Hits</string>
    <string name="playlists">Playlists</string>
    <string name="web_client_id">885105135618-or4k3o6uvqrhmri6jit3l8gepi7kc6d0.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or_with_lines">───────────── OR ─────────────</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="step_into_the_rhythm">Step into the Rhythm 🎶</string>
    <string name="logout">Logout</string>
    <string name="your_library">Your library</string>
    <string name="library">Library</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="about_the_artist">About the Artist</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="enter_playlist_name">Enter Playlist name</string>
    <string name="files">Files</string>
    <string name="play_from_your_local_storage">Play from your Local Storage</string>
    <string name="nothing_played_yet">Nothing played yet...</string>
    <string name="play_from_files">Play from Files</string>
    <string name="see_all">See all</string>
    <string name="what_do_you_want_to_listen_to">🔍\t What do you want to listen to?</string>
    <string name="see_more">See more</string>
    <string name="about">About</string>
    <string name="songs">Songs</string>
    <string name="artist_image">Artist Image</string>
    <string name="popular">Popular</string>
    <string name="punjabi">Punjabi</string>
    <string name="register">Register</string>
    <string name="let_s_get_your_account_set_up">Let\'s get your account set up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
</resources>