<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login"
    android:background="@drawable/bg_splash">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardCornerRadius="25dp"
        android:visibility="visible"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:padding="30dp"
            android:orientation="vertical"
            android:background="@drawable/bgimgsignin"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/inter_black"
                    android:textSize="35sp"
                    android:textColor="#0C07FF"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_into_the_rhythm"
                    android:textSize="18sp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="#393939"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawablePadding="10dp"
                android:textColorHint="#090909"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_mail"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:drawablePadding="10dp"
                    android:textColorHint="#000000"
                    android:drawableStart="@drawable/ic_password"/>

                <ToggleButton
                    android:id="@+id/eyepass"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textOff=""
                    android:textOn=""
                    android:text=""
                    android:background="@drawable/showpass"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="#4D1CA3"
                android:fontFamily="@font/inter_medium"
                android:layout_marginVertical="3dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="#0C07FF"
                android:layout_marginTop="5dp"
                app:cornerRadius="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_with_lines"
                android:layout_marginVertical="20dp"
                android:textColor="#393939"/>

            <LinearLayout
                android:id="@+id/googleSignIn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/bg_signin"
                android:padding="10dp"
                android:layout_marginBottom="15dp">
                <com.makeramen.roundedimageview.RoundedImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="#00D5D5D5"
                    android:src="@drawable/google"
                    app:riv_corner_radius="50dp"
                    app:riv_oval="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/inter_bold"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>

