<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FilesFragment"
    android:background="@color/bg_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_black"
            android:text="@string/play_from_your_local_storage"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/constraintLyt" />

        <TextView
            android:id="@+id/nothing_played_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/nothing_played_yet"
            android:textColor="#BCBCBC"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="@id/constraintLyt"
            app:layout_constraintStart_toStartOf="@id/constraintLyt"
            app:layout_constraintTop_toTopOf="@id/guideline4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playFilesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp"
            android:text="@string/play_from_files"
            android:textSize="17sp"
            app:icon="@drawable/ic_play_arrow"
            app:iconSize="27dp"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="@id/constraintLyt"
            app:layout_constraintStart_toStartOf="@id/constraintLyt" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.075" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.91" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="590dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>