<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMore"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bottomsheet"
    app:cardCornerRadius="10dp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:gravity="center_horizontal">
        <View
            android:id="@+id/viewBar"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="#AEADAD"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/img"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Case"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Diljit Dosanjh"
                    android:textColor="#AEADAD"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#5C5C5C"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="15dp">

            <LinearLayout
                android:id="@+id/addToPlaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_add_outline"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_playlist"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_artist"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_the_artist"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>