<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ArtistActivity"
    android:background="@color/bg_primary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:padding="0dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="0dp"
            android:background="@android:color/transparent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextAppearance="@style/CollapsingToolbarTitle"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitle">
            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                style="@style/ToolbarStyle"
                android:title="@string/app_name"
                app:layout_collapseMode="pin"/>
            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_playlist"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="@id/guideline17"
                    app:layout_constraintTop_toTopOf="parent"/>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_view_container1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/popular"
                        app:layout_constraintVertical_bias="0.0">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/popular" />
                    </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/see_more"
                    android:textColor="#BCBCBC"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@id/guideline17"
                    app:layout_goneMarginTop="3dp"
                    app:layout_constraintTop_toBottomOf="@id/shimmer_view_container1"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="15dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>



            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/about"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="@id/guideline15"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/aboutCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="50dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintTop_toBottomOf="@id/about"
                        app:layout_constraintStart_toStartOf="@id/guideline15"
                        app:layout_constraintEnd_toEndOf="@id/guideline18">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/artist_image"
                                android:src="@drawable/bg_song_banner"
                                android:scaleType="center"
                                android:layout_width="match_parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_height="250dp"
                                android:contentDescription="@string/artist_image" />

                            <LinearLayout
                                android:id="@+id/artistClick"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:orientation="horizontal"
                                app:layout_constraintBottom_toBottomOf="@id/artist_image"
                                android:layout_marginBottom="20dp"
                                android:layout_marginEnd="20dp">

                                <TextView
                                    android:id="@+id/artist_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Artist"
                                    android:textColor="@color/white"
                                    android:fontFamily="@font/inter_bold"
                                    android:textSize="25sp"
                                    android:layout_marginEnd="10dp"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="➤"
                                    android:textStyle="bold"
                                    android:textSize="25sp"
                                    app:layout_constraintEnd_toEndOf="@id/guideline18"/>

                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>



                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="15dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="15dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:src="@drawable/ic_play_arrow"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginRight="20dp"/>

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="start|top"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:tint="@color/black"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>